--- a/DhaliProcurement/Views/MaterialsEntry/Edit.cshtml
+++ b/DhaliProcurement/Views/MaterialsEntry/Edit.cshtml
@@ -98,7 +98,7 @@
                                 <tr>
                                     <td style="font-weight: bold;" class="col-lg-1">PO No.</td>
                                     <td class="col-lg-3">
-                                        @Html.DropDownList("PONo", null, "Select item", htmlAttributes: new { @class = "form-control select2", @data_required = "required", @id = "PONo" })
+                                        @Html.DropDownList("PONo", null, "Select item", htmlAttributes: new { @class = "form-control select2", @data_required = "required", @id = "PONo1" })
                                     </td>
                                     <td style="font-weight: bold;" class="col-lg-1">Vendor Name</td>
                                     <td class="col-lg-3">
