--- a/DhaliProcurement/Views/PurchaseOrders/Edit.cshtml
+++ b/DhaliProcurement/Views/PurchaseOrders/Edit.cshtml
@@ -422,7 +422,8 @@
         counter++;
         var ItemId = $('#ItemName option:selected').val();
         //alert('Item ' + ItemId);
-
+        var RequisitionQty = $('#RequisitionQty').val();
+      
         var ItemName = $('#ItemName option:selected').text();
         //alert('Item ' + ItemName);
         var UnitName = $('#UnitName').val();
