--- a/DhaliProcurement/Views/Report/VendorPayment.cshtml
+++ b/DhaliProcurement/Views/Report/VendorPayment.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Materials Entry";
+    ViewBag.Title = "Vendor Payment ";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -9,7 +9,7 @@
         <!-- Basic layout-->
         <div class="panel panel-flat">
             <div class="panel-heading">
-                <h5 class="panel-title"><i class="icon-stack-plus position-left"></i> Materials Entry</h5><hr />
+                <h5 class="panel-title"><i class="icon-stack-plus position-left"></i> Vendor Payment Report</h5><hr />
                 <div class="heading-elements">
                     <ul class="icons-list">
                         <li><a data-action="collapse"></a></li>
