RollBack for Create View Done

--- a/DhaliProcurement/Views/MaterialsEntry/Index.cshtml
+++ b/DhaliProcurement/Views/MaterialsEntry/Index.cshtml
@@ -58,18 +58,18 @@
 
         <table class="table table-responsive table-xs  table-bordered">
             <tr class="bg-grey">
-                <th>SL. No.</th>
-                <th>
+                <th class="col-lg-1">SL. No.</th>
+                <th  class="col-lg-4">
                     <label>Project Name</label>
                 </th>
-                <th>
+                <th  class="col-lg-3">
                     <label>Site Name</label>
                 </th>
-                <th>
+                <th  class="col-lg-1">
                     <label>Materials Entry Date</label>
                 </th>
 
-                <th></th>
+                <th  class="col-lg-3"></th>
             </tr>
 
             @foreach (var item in Model)
