--- a/DhaliProcurement/Views/CompanyResources/Create.cshtml
+++ b/DhaliProcurement/Views/CompanyResources/Create.cshtml
@@ -50,7 +50,7 @@
                             @Html.LabelFor(model => model.DOJ, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
                                 @*@Html.EditorFor(model => model.DOJ, new { htmlAttributes = new { @class = "form-control datepicker" } })*@
-                                @Html.TextBoxFor(model => model.DOJ, new { @class = "form-control" })
+                                @Html.TextBoxFor(model => model.DOJ, new { @class = "form-control datepicker" })
                                 @Html.ValidationMessageFor(model => model.DOJ, "", new { @class = "text-danger" })
                             </div>
                         </div>
