--- a/DhaliProcurement/Views/VendorPayments/Create.cshtml
+++ b/DhaliProcurement/Views/VendorPayments/Create.cshtml
@@ -500,7 +500,7 @@
         var ItemId = $('#ItemName option:selected').val();
         var ProjectId = $('#ProjectId option:selected').val();
         var SiteId = $('#SiteId option:selected').val();
-
+        var PONo = $('#PONo option:selected').val();
         //if (ProjectId == "" && SiteId == "") {
         //    alert('Please Select Project Id and Site Id');
         //}
@@ -508,7 +508,7 @@
         $.ajax({
             type: "post",
             url: "/VendorPayments/GetVendorPayDetData",
-            data: { ItemId, ProjectId, SiteId },
+            data: { ItemId, ProjectId, SiteId, PONo },
             datatype: "json",
             traditional: true,
             success: function (data) {
@@ -676,8 +676,10 @@
         var TotalAmount = $('#TotalAmount').val();
         var Payment = $('#Payment').val();
         var Remarks = $('#Remarks').val();
+        var Proc_MaterialEntryDetId = $('#Proc_MaterialEntryDetId').val();
 
 
+        //alert(Proc_MaterialEntryDetId);
 
         if ($('#ProjectId').val().trim() == '') {
             $('#ProjectId_Error').show();
@@ -738,10 +740,12 @@
                 isAllValid = false;
             }
         });
+        
+
 
         if (isAllValid) {
             var newRow = jQuery('<tr>'
-                + '<td><input value="' + ProjectId + '" type="hidden" name="ProjectId" class="form-control" style="width:50px;"/><input class="form-control" value="' + ProjectName + '" readonly="true" type="text" name="ProjectName"  style="width:90px;"/></td>'
+                + '<td><input value="' + Proc_MaterialEntryDetId + '" type="hidden" name="Proc_MaterialEntryDetId"/><input value="' + ProjectId + '" type="hidden" name="ProjectId" class="form-control" style="width:50px;"/><input class="form-control" value="' + ProjectName + '" readonly="true" type="text" name="ProjectName"  style="width:90px;"/></td>'
                 + '<td><input value="' + SiteId + '" type="hidden" name="SiteId" class="form-control" style="width:50px;"/><input class="form-control" value="' + SiteName + '" readonly="true" type="text" name="SiteName"  style="width:90px;"/></td>'
                 + '<td><input value="' + ReqNo + '" type="hidden" name="ReqNo" class="form-control" style="width:50px;"/><input class="form-control" value="' + ReqNoName + '" readonly="true" type="text" name="ReqNoName"  style="width:90px;"/></td>'
                 + '<td><input value="' + PONo + '" type="hidden" name="PONo" class="form-control" style="width:50px;"/><input class="form-control" value="' + PONoName + '" readonly="true" type="text" name="PONoName"  style="width:90px;"/></td>'
@@ -1092,7 +1096,7 @@
 
         //===========Detail Form===========
 
-        var Proc_MaterialEntryDetId = $('#Proc_MaterialEntryDetId').val();
+       
 
         var ProjectId = document.getElementsByName("ProjectId");
         var SiteId = document.getElementsByName("SiteId");
@@ -1105,12 +1109,14 @@
         var BillNo = document.getElementsByName("BillNo");
         var Payment = document.getElementsByName("Payment");
         var Remarks = document.getElementsByName("Remarks");
+        var Proc_MaterialEntryDetId = document.getElementsByName('Proc_MaterialEntryDetId');
 
         var PaymentItems = [];
         //alert($('#RequisitionDetails tr').length - 1)
 
         var tableCounter = $('#PaymentDetails tr').length - 1;
         //alert('Length: ' + tableCounter);
+
 
         for (var i = 0; i < tableCounter; i++) {
             PaymentItems.push({
@@ -1125,7 +1131,7 @@
                 BillNo: BillNo[i].value,
                 Payment: Payment[i].value,
                 Remarks: Remarks[i].value,
-                Proc_MaterialEntryDetId: Proc_MaterialEntryDetId
+                Proc_MaterialEntryDetId: Proc_MaterialEntryDetId[i].value
             });
             console.log('---------->');
             console.log('ProjectId: ' + PaymentItems[i].ProjectId);
