--- a/DhaliProcurement/Views/VendorPayments/Edit.cshtml
+++ b/DhaliProcurement/Views/VendorPayments/Edit.cshtml
@@ -722,6 +722,7 @@
         selRow.find('input[name=UnitId]').val(ModalUnitId);
         selRow.find('input[name=UnitName]').val(ModalUnitName);
         selRow.find('input[name=ChallanNo]').val(ModalChallanNo);
+        selRow.find('input[name=ChallanNoName]').val(ModalChallanNoName);       
         selRow.find('input[name=BillNo]').val(ModalBillNo);
         selRow.find('input[name=TotalAmount]').val(ModalTotalAmount);
         selRow.find('input[name=Payment]').val(ModalPayment);
