--- a/DhaliProcurement/Views/VendorPayments/Index.cshtml
+++ b/DhaliProcurement/Views/VendorPayments/Index.cshtml
@@ -1,14 +1,12 @@
 ﻿@model IEnumerable<DhaliProcurement.Models.Proc_VendorPaymentMas>
 @using DhaliProcurement.Helper
 
-
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
     DhaliProcurement.Models.DCPSContext db = new DhaliProcurement.Models.DCPSContext();
     var counter = 0;
 }
-
 <div class="panel panel-flat">
     <div class="panel-heading">
         <h5 class="panel-title "><i class="icon-task position-left"></i>Vendor Payments List</h5><hr />
@@ -24,24 +22,20 @@
             @Html.ActionLink("Create Payment", "Create", null, new { @class = "btn btn-info", @style = "background-color: grey;border: none;" })
         </div>
         <div class="col-md-5 col-lg-offset-2">
-
             @using (@Html.BeginForm("Index", "VendorPayments", FormMethod.Post))
             {
                 <div class="form-horizontal">
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div class="form-group">
                         @Html.Label("Party Name", htmlAttributes: new { @class = "control-label col-md-3" })
-
                         <div class="col-md-6">
                             @Html.DropDownList("VendorId", null, "--Select--", htmlAttributes: new { @class = "form-control select2", @Id = "VendorId" })
-                           
 
-                          </div>                   
+                        </div>
                         <input value="Search" class="btn btn-primary" type="submit" style="background-color: grey;border: none;" />
-                     </div>
+                    </div>
                 </div>
             }
-
         </div>
         <table class="table table-responsive table-xs  table-bordered">
             <tr class="bg-grey">
@@ -51,13 +45,12 @@
                     @*@Html.DisplayNameFor(model => model.VPDate)*@
                     <label>Payment Date</label>
                 </th>
-              
+
                 <th>
                     @Html.DisplayNameFor(model => model.Remarks)
                 </th>
                 <th></th>
             </tr>
-
             @foreach (var item in Model)
             {
                 counter++;
@@ -70,29 +63,25 @@
                         }
                         @*<label>@vendorName</label>*@
                         @Html.ActionLink(vendorName, "Edit", new { vPayId = item.Id })
-
                     </td>
-
                     <td>
-
                         <label>@NullHelper.DateToString(item.VPDate)</label>
                     </td>
-
                     <td>
                         @Html.DisplayFor(modelItem => item.Remarks)
                     </td>
                     <td>
                         @Html.ActionLink(" ", "Edit", new { vPayId = item.Id }, new { @class = "btn btn-xs text-info  icon-pencil4", @title = "Edit Vendor Payment Details" })
                         @Html.ActionLink(" ", "Details", new { vPayId = item.Id }, new { @class = "btn btn-xs text-info  icon-file-text2" })
-                        <a class="btn btn-xs text-danger icon-cross2" title="Delete" href="javascript:deleteFunction(@item.Id)"></a>
+                        @if (User.IsInRole("Management"))
+                        {
+                            <a class="btn btn-xs text-danger icon-cross2" title="Delete" href="javascript:deleteFunction(@item.Id)"></a>
+                        }
                     </td>
                 </tr>
                             }
-
         </table>
-
     </div>
-
 </div>
 <script>
     $(document).ready(function () {
@@ -132,5 +121,3 @@
 
     }
 </script>
-
-
