--- a/DhaliProcurement/Views/Projects/Edit.cshtml
+++ b/DhaliProcurement/Views/Projects/Edit.cshtml
@@ -34,7 +34,7 @@
                             <td class="col-lg-2">Project Name</td>
                             <td class="col-lg-10" colspan="2">
                                 <input type="text" value="@ViewBag.ProjectName" id="ProjectName" class="form-control" tabindex="1"/>
-
+                                <span class="error" id="ProjectName_Error"></span>
                             </td>
                         </tr>
                         <tr>
@@ -57,7 +57,7 @@
                         <tr>
                             <td>Project End Date</td>
                             <td colspan="2">
-                                <input type="text" value="@ViewBag.EndDate" id="EndDate" class="form-control datepicker" tabindex="4" />
+                                <input type="text" value="@ViewBag.EndDate" id="EndDate" class="form-control datepicker" tabindex="4" />                          
                             </td>
                         </tr>
                         @*<tr>
@@ -77,6 +77,7 @@
                             <td>Remarks</td>
                             <td colspan="2">
                                 <input type="text" value="@ViewBag.ProjectRemarks" id="ProjectRemarks" class="form-control" tabindex="5"/>
+                                <span class="error" id="Remarks_Error">Site name required</span>
                             </td>
                         </tr>
 
@@ -116,8 +117,8 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><span class="error" id="SiteName_Error">Site required</span></td>
-                            <td><span class="error" id="SiteLocation_Error">Location required</span></td>
+                            <td><span class="error" id="SiteName_Error">Site name required</span></td>
+                            <td><span class="error" id="SiteLocation_Error">Location required</span><span class="error" id="LocationValidation_Error"></span></td>
                             <td><span class="error" id="SiteEngineer_Error">Site Engineer required</span></td>
                         </tr>
                     </table>
@@ -277,6 +278,7 @@
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                             <div class="col-md-10">
                                 @Html.TextBox("ModalSite", null, new { @class = "form-control", @id = "ModalSite" })
+                                <span class="error" id="ModalSiteName_Error"></span>
                             </div>
                         </div>
                         <div class="form-group">
@@ -284,6 +286,7 @@
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                             <div class="col-md-10">
                                 @Html.TextBox("ModalLocation", null, new { @class = "form-control" })
+                                <span class="error" id="ModalLocation_Error"></span>
                             </div>
                         </div>
                         <div class="form-group">
@@ -291,6 +294,7 @@
                             <div class="col-md-10">
                                 <input type="hidden" id="modalSiteEng" />
                                 @Html.DropDownList("RName", null, "--Select--", htmlAttributes: new { @id = "ModalSiteEngineer", @class = "form-control select2", @style = "width: 500px !important" })
+                                <span class="error" id="ModalSiteEngineer_Error"></span>
                             </div>
                         </div>
                         <div class="modal-footer">
@@ -328,24 +332,26 @@
     var taskCounter =0;
 
     $(document).ready(function (){
+        //Form validation
+        $('#ProjectName_Error').hide();
+        $('#Remarks_Error').hide();
         $('#SiteName_Error').hide();
         $('#SiteLocation_Error').hide();
         $('#SiteEngineer_Error').hide();
+        $('#LocationValidation_Error').hide();
+
+        //Modal Edit Validation
+        $('#ModalSiteName_Error').hide();
+        $('#ModalLocation_Error').hide();
+        $('#ModalSiteEngineer_Error').hide();
 
         var ProjectUnderSiteId= @ViewBag.PId;
-        //var SiteName = document.getElementsByName("SiteName");
-        //alert('sname'+SiteName);
-        //var SiteLocation = document.getElementsByName("SiteLocation");
-        //var SiteEngineerId = document.getElementsByName("SiteEngineerId");
-
 
         ResourceDetails = JSON.stringify({
            ProjectId: ProjectUnderSiteId
      });
 
-      //var SiteEngineerId = $('#SiteEngineerId option:selected').text();
-
-
+        //get project items
         $.ajax({
             contentType: 'application/json; charset=utf-8',
             dataType: 'json',
@@ -354,7 +360,7 @@
             traditional: true,
             data: ResourceDetails,
             success: function (data) {
-               // console.log(data);
+
          for (var i = 0; i < data.length; i++) {
 
              taskCounter++;
@@ -430,6 +436,7 @@
 
 
 
+    //item edit(Modal)
 
     function editModalItem(){
         var TaskId = row.find('input[name=TaskId]').val();
@@ -437,7 +444,6 @@
         var Location = row.find('input[name=SiteLocation]').val();
         var SiteEngineer = row.find('input[name=SiteEngineer]').val();
         var SiteEngineerId = row.find('input[name=SiteEngineerId]').val();
-        //alert(SiteEngineer);
 
         $('#ModalTaskId').val(TaskId);
         $('#ModalSite').val(SiteName);
@@ -449,7 +455,6 @@
 
 
     $('#ModalDetailSave').click(function () {
-
         
         var isValidSite = true;
         var TaskId = $('#ModalTaskId').val();
@@ -459,6 +464,35 @@
         var SiteEngineer = $('#ModalSiteEngineer option:selected').val();
         var SiteEngineerName = $('#ModalSiteEngineer option:selected').text();
         
+
+        if (SiteName.trim().length > 256) {
+            $('#ModalSiteName_Error').text("Site Name can not be greater than 256 characters!").show();
+            isValidSite = false;
+        }
+        else {
+            $('#ModalSiteName_Error').hide();
+        }
+
+        if (Location.trim().length > 256) {
+            $('#ModalLocation_Error').text("Location can not be greater than 256 characters!").show();
+            isValidSite = false;
+        }
+        else {
+            $('#ModalLocation_Error').hide();
+        }
+
+        if (SiteEngineerName.trim() == '' || SiteEngineerName.trim() == "--Select--") {
+
+            isValidSite = false;
+            $('#ModalSiteEngineer_Error').text("Site Engineer required").show();
+        }
+        else {
+            $('#ModalSiteEngineer_Error').hide();
+        }
+
+
+
+        //validation for checking duplicate item
         $('table.Resource-list tbody tr').each(function () {
             var name = $(this).find("td input[name=SiteName]").val();
             var task = $(this).find("td input[name=TaskId]").val();
@@ -470,6 +504,7 @@
                 }
             }         
         });
+
 
         if (isValidSite) {
             selRow.find('input[name=SiteName]').val(SiteName);
@@ -495,7 +530,6 @@
 
     //add new row
     $('#addNewRow').click(function (event) {
-       // debugger;
         event.preventDefault();
         counter++;
 
@@ -514,7 +548,6 @@
         var SiteEngineerId = $('#SiteRName option:selected').val();
        // alert('SiteEngineerId' + SiteEngineerId);
 
-        //new
         var isValidSite = true;
 
         if ($('#SiteName').val().trim() == '') {
@@ -525,10 +558,13 @@
         else {
             $('#SiteName_Error').hide();
         }
-        if ($('#SiteName').val().trim().length >255) {
+        if ($('#SiteName').val().trim().length > 255) {
 
-            alert("Site Name can not be greater than 256 characters!!");
+            $('#SiteName_Error').text("Site Name can not be greater than 256 characters!").show();
             isValidSite = false;
+        }
+        else {
+            $('#SiteName_Error').hide();
         }
         if ($('#SiteLocation').val().trim() == '') {
 
@@ -538,19 +574,22 @@
         else {
             $('#SiteLocation_Error').hide();
         }
-        if ($('#SiteLocation').val().trim().length >255) {
+        if ($('#SiteLocation').val().trim().length > 255) {
 
-            alert("Site Location can not be greater than 256 characters!!");
             isValidSite = false;
+            $('#LocationValidation_Error').text("Site Location cannot be greater than 256 characters!").show();
+        }
+        else {
+            $('#LocationValidation_Error').hide();
         }
 
-        if (SiteEngineer === '' || SiteEngineer==="--Select--") {
+        if (SiteEngineer == '' || SiteEngineer=="--Select--") {
 
             isValidSite = false;
             $('#SiteEngineer_Error').show();
         }
         else {
-            $('#SiteEngineer_Error').hide();
+            $('#SiteEngineer_Error').text("Site Engineer required").hide();
         }
 
         $('table.Resource-list tr').each(function(){
@@ -578,9 +617,6 @@
             jQuery('table.Resource-list tbody').append(newRow);
             $('#SiteName').val("");
             $('#SiteLocation').val("");
-            //$("#SiteRName").attr("selectedIndex", -1);
-            //$("#ProjectManager").val("");
-
         }
 
 
@@ -590,14 +626,9 @@
             editModalItem();
         });
 
-        $('#SiteName').val("");
-        $('#SiteLocation').val("");
+
         //end
     });
-
-
-
-
 
 
       var ProjectId=@ViewBag.Proj;
@@ -611,8 +642,6 @@
         var currRowIndex = 0;
 
         currRowIndex = $(e).closest('tr').index() + 1;
-
-        //  alert('procId '+ProcProjectId);
 
         if (confirm('Do you really want to delete?')==false)
         {
@@ -662,9 +691,6 @@
 
 
     }
-
-
-
     //end
 </script>
 
@@ -713,39 +739,40 @@
     function UpdateProject() {
         var isValid = true;
         var ProjectId=@ViewBag.Proj;
-        //alert('ProjectId '+ProjectId);
 
         var ProjectName = $('#ProjectName').val();
-        //alert('ProjectName '+ ProjectName);
-        var StartDate = $('#StartDate').val();
-       // alert(StartDate);
-        var EndDate = $('#EndDate').val();
-        //alert(EndDate);
-        var Remarks = $('#ProjectRemarks').val();
-        //alert('remarks '+Remarks);
+        if (ProjectName.trim().length > 256) {
+            isValid = false;
+            $('#ProjectName_Error').text("Project name cannot be greater than 256 characters!")
+            $('#ProjectName_Error').show();
+        }
+        else {
+            $('#ProjectName_Error').hide();
+        }
+
         var RName = $('#ProjectManager').val();
-        //alert('ProjectManager '+RName);
+        var StartDate = $('#StartDate').val();
+        var EndDate = $('#EndDate').val();
+        var Remarks = $('#ProjectRemarks').val();
 
-        //var SiteId = document.getElementsByName("SiteId");
-        //for (var i = 0; i < SiteId.length; i++) {
-        //    alert('SiteId ' + SiteId[i].value);
-        //}
+        if (Remarks.trim().length > 200) {
+            isValid = false;
+            $('#Remarks_Error').text("Remarks cannot be greater than 256 characters!").show();
+        }
+        else {
+            $('#Remarks_Error').hide();
+        }
 
 
+        //Details items
         var ProjectSiteId = document.getElementsByName("ProjectSiteId");
-       // alert('siteId '+ProjectSiteId);
         var SiteName = document.getElementsByName("SiteName");
-       // alert('sname: '+SiteName);
         var SiteLocation = document.getElementsByName("SiteLocation");
-       // alert('SiteLocation: '+SiteLocation);
-
         var SiteEngineerId = document.getElementsByName("SiteEngineerId");
-
         var SiteEngineer = document.getElementsByName("SiteEngineer");
 
-       // alert('SiteEngineerId: '+SiteEngineerId);
 
-        var Length = $('.Resource-list tr').length;
+        var Length = $('.Resource-list tr').length; //detail table length
         //  alert('L '+Length);
 
         if ($('.Resource-list tr').length < 2) {
